// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack development config matches snapshot 1`] = `
Object {
  "devtool": "eval-source-map",
  "entry": Object {
    "index": "<PROJECT_ROOT>/src/index.ts",
  },
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "options": Object {
          "configFile": "<PROJECT_ROOT>/config/babel.config.cjs",
        },
        "test": /\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)\\$/,
      },
      Object {
        "test": /\\\\\\.css\\$/i,
        "use": Array [
          "style-loader",
          "css-loader",
        ],
      },
    ],
  },
  "optimization": Object {
    "minimize": false,
    "minimizer": Array [
      TerserPlugin {
        "options": Object {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": Object {
            "implementation": [Function],
            "options": Object {
              "warnings": false,
            },
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
    "splitChunks": Object {
      "cacheGroups": Object {
        "defaultVendors": Object {
          "priority": -10,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      },
      "chunks": "async",
      "minChunks": 1,
      "minSize": 30000,
    },
  },
  "output": Object {
    "filename": "[name].[chunkhash].js",
    "path": "<PROJECT_ROOT>/dist",
  },
  "plugins": Array [
    ESLintWebpackPlugin {
      "key": "ESLintWebpackPlugin",
      "options": Object {
        "cache": true,
        "cacheLocation": "node_modules/.cache/eslint-cache/",
        "emitError": false,
        "emitWarning": true,
        "extensions": Array [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "failOnError": false,
        "lintDirtyModulesOnly": false,
        "reportUnusedDisableDirectives": "warn",
        "resourceQueryExclude": Array [],
      },
      "run": [Function],
    },
    HtmlWebpackPlugin {
      "userOptions": Object {
        "template": "<PROJECT_ROOT>/src/index.html",
        "title": "trshcmpctr",
      },
      "version": 5,
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
    ],
  },
}
`;

exports[`webpack production config matches snapshot 1`] = `
Object {
  "devtool": "source-map",
  "entry": Object {
    "index": "<PROJECT_ROOT>/src/index.ts",
  },
  "mode": "production",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "options": Object {
          "configFile": "<PROJECT_ROOT>/config/babel.config.cjs",
        },
        "test": /\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)\\$/,
      },
      Object {
        "test": /\\\\\\.css\\$/i,
        "use": Array [
          "style-loader",
          "css-loader",
        ],
      },
    ],
  },
  "optimization": Object {
    "minimize": true,
    "minimizer": Array [
      TerserPlugin {
        "options": Object {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": Object {
            "implementation": [Function],
            "options": Object {
              "warnings": false,
            },
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
    "splitChunks": Object {
      "cacheGroups": Object {
        "defaultVendors": Object {
          "priority": -10,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      },
      "chunks": "async",
      "minChunks": 1,
      "minSize": 30000,
    },
  },
  "output": Object {
    "filename": "[name].[chunkhash].js",
    "path": "<PROJECT_ROOT>/dist",
  },
  "plugins": Array [
    ESLintWebpackPlugin {
      "key": "ESLintWebpackPlugin",
      "options": Object {
        "cache": true,
        "cacheLocation": "node_modules/.cache/eslint-cache/",
        "emitError": true,
        "emitWarning": false,
        "extensions": Array [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "failOnError": true,
        "lintDirtyModulesOnly": false,
        "reportUnusedDisableDirectives": null,
        "resourceQueryExclude": Array [],
      },
      "run": [Function],
    },
    HtmlWebpackPlugin {
      "userOptions": Object {
        "template": "<PROJECT_ROOT>/src/index.html",
        "title": "trshcmpctr",
      },
      "version": 5,
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
    ],
  },
}
`;
